--- a/webscp_v0.ipynb
+++ b/webscp_v0.ipynb
@@ -66,168 +66,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>Classe</th>\n",
-       "      <th>Assunto</th>\n",
-       "      <th>Magistrado</th>\n",
-       "      <th>Comarca</th>\n",
-       "      <th>Foro</th>\n",
-       "      <th>Vara</th>\n",
-       "      <th>Data_disp</th>\n",
-       "      <th>Teor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000315-72.2016.8.26.0156</td>\n",
-       "      <td>Despejo por Falta de Pagamento Cumulado Com Co...</td>\n",
-       "      <td>Locação de Imóvel</td>\n",
-       "      <td>FERNANDO OLIVEIRA CAMARGO</td>\n",
-       "      <td>Cruzeiro</td>\n",
-       "      <td>Foro de Cruzeiro</td>\n",
-       "      <td>2ª Vara Cível</td>\n",
-       "      <td>01/10/3199</td>\n",
-       "      <td>\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1041537-33.2019.8.26.0053</td>\n",
-       "      <td>Procedimento Comum Cível</td>\n",
-       "      <td>Voluntária</td>\n",
-       "      <td>Alexandra Fuchs de Araujo</td>\n",
-       "      <td>SÃO PAULO</td>\n",
-       "      <td>Foro Central - Fazenda Pública/Acidentes</td>\n",
-       "      <td>6ª Vara de Fazenda Pública</td>\n",
-       "      <td>26/10/2019</td>\n",
-       "      <td>\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1006867-71.2016.8.26.0053</td>\n",
-       "      <td>Desapropriação</td>\n",
-       "      <td>Desapropriação</td>\n",
-       "      <td>Alexandra Fuchs de Araujo</td>\n",
-       "      <td>SÃO PAULO</td>\n",
-       "      <td>Foro Central - Fazenda Pública/Acidentes</td>\n",
-       "      <td>6ª Vara de Fazenda Pública</td>\n",
-       "      <td>26/10/2019</td>\n",
-       "      <td>\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0004761-08.2016.8.26.0457</td>\n",
-       "      <td>Ação Penal - Procedimento Ordinário</td>\n",
-       "      <td>Crimes de Trânsito</td>\n",
-       "      <td>DONEK HILSENRATH GARCIA</td>\n",
-       "      <td>Pirassununga</td>\n",
-       "      <td>Foro de Pirassununga</td>\n",
-       "      <td>1ª Vara</td>\n",
-       "      <td>26/10/2019</td>\n",
-       "      <td>\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1002795-22.2018.8.26.0457</td>\n",
-       "      <td>Cumprimento de sentença</td>\n",
-       "      <td>Prestação de Serviços</td>\n",
-       "      <td>DONEK HILSENRATH GARCIA</td>\n",
-       "      <td>Pirassununga</td>\n",
-       "      <td>Foro de Pirassununga</td>\n",
-       "      <td>1ª Vara</td>\n",
-       "      <td>26/10/2019</td>\n",
-       "      <td>\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a83edb30dc304472ba17f1adc5d8dfe0",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "                          id  \\\n",
-       "0  1000315-72.2016.8.26.0156   \n",
-       "1  1041537-33.2019.8.26.0053   \n",
-       "2  1006867-71.2016.8.26.0053   \n",
-       "3  0004761-08.2016.8.26.0457   \n",
-       "4  1002795-22.2018.8.26.0457   \n",
-       "\n",
-       "                                              Classe                Assunto  \\\n",
-       "0  Despejo por Falta de Pagamento Cumulado Com Co...      Locação de Imóvel   \n",
-       "1                           Procedimento Comum Cível             Voluntária   \n",
-       "2                                     Desapropriação         Desapropriação   \n",
-       "3                Ação Penal - Procedimento Ordinário     Crimes de Trânsito   \n",
-       "4                            Cumprimento de sentença  Prestação de Serviços   \n",
-       "\n",
-       "                  Magistrado       Comarca  \\\n",
-       "0  FERNANDO OLIVEIRA CAMARGO      Cruzeiro   \n",
-       "1  Alexandra Fuchs de Araujo     SÃO PAULO   \n",
-       "2  Alexandra Fuchs de Araujo     SÃO PAULO   \n",
-       "3    DONEK HILSENRATH GARCIA  Pirassununga   \n",
-       "4    DONEK HILSENRATH GARCIA  Pirassununga   \n",
-       "\n",
-       "                                       Foro                        Vara  \\\n",
-       "0                          Foro de Cruzeiro               2ª Vara Cível   \n",
-       "1  Foro Central - Fazenda Pública/Acidentes  6ª Vara de Fazenda Pública   \n",
-       "2  Foro Central - Fazenda Pública/Acidentes  6ª Vara de Fazenda Pública   \n",
-       "3                      Foro de Pirassununga                     1ª Vara   \n",
-       "4                      Foro de Pirassununga                     1ª Vara   \n",
-       "\n",
-       "    Data_disp                                               Teor  \n",
-       "0  01/10/3199  \\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...  \n",
-       "1  26/10/2019  \\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...  \n",
-       "2  26/10/2019  \\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...  \n",
-       "3  26/10/2019  \\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...  \n",
-       "4  26/10/2019  \\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\n\\nTRIBUNAL DE ...  "
+       "HBox(children=(IntProgress(value=0, max=2913), HTML(value='')))"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "\n",
     "driver = webdriver.Firefox(executable_path = 'D:\\\\programas\\\\geckodriver\\\\geckodriver.exe')\n",
     "driver.get('http://esaj.tjsp.jus.br/cjpg/pesquisar.do?conversationId=&dadosConsulta.pesquisaLivre=JULG*&tipoNumero=UNIFICADO&numeroDigitoAnoUnificado=&foroNumeroUnificado=&dadosConsulta.nuProcesso=&dadosConsulta.nuProcessoAntigo=&classeTreeSelection.values=&classeTreeSelection.text=&assuntoTreeSelection.values=&assuntoTreeSelection.text=&agenteSelectedEntitiesList=&contadoragente=0&contadorMaioragente=0&cdAgente=&nmAgente=&dadosConsulta.dtInicio=&dadosConsulta.dtFim=&varasTreeSelection.values=&varasTreeSelection.text=&dadosConsulta.ordenacao=DESC#')\n",
-    "dados_extraidos = []\n",
-    "for i in range(0,500):\n",
-    "    dados_extraidos = dados_extraidos + listar_dados_pagina(i,driver)\n",
-    "df = pd.DataFrame(dados_extraidos, columns =['id', 'Classe', 'Assunto', 'Magistrado', 'Comarca', 'Foro', 'Vara', 'Data_disp', 'Teor'])\n",
-    "df.head()"
+    "def extrair_intervalo_pg(lim_inf, lim_sup):\n",
+    "    dados_extraidos = []\n",
+    "    for i in range(lim_inf, lim_sup):\n",
+    "        dados_extraidos = dados_extraidos + listar_dados_pagina(i,driver)\n",
+    "    df = pd.DataFrame(dados_extraidos, columns =['id', 'Classe', 'Assunto', 'Magistrado', 'Comarca', 'Foro', 'Vara', 'Data_disp', 'Teor'])\n",
+    "    df.to_csv('27_10_19_'+str(lim_inf)+'_'+str(lim_sup)+'.csv')\n",
+    "\n",
+    "n_ranges = 2914\n",
+    "lim_sup = 1\n",
+    "for i in tqdm_notebook(range(1, n_ranges)):\n",
+    "    lim_inf = lim_sup\n",
+    "    lim_sup = i*50\n",
+    "    extrair_intervalo_pg(lim_inf, lim_sup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('27_10_19_1-500.csv')"
+    "from tqdm import tqdm_notebook\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
