--- a/webscp_v0.ipynb
+++ b/webscp_v0.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,14 @@
     "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
     "    lista_decisoes_pagina = soup.find_all('tr', class_='fundocinza1')\n",
     "    lista_dados = [extrair_dados_decisao(decisao) for decisao in lista_decisoes_pagina]\n",
-    "    return lista_dados"
+    "    return lista_dados\n",
+    "\n",
+    "def extrair_intervalo_pg(lim_inf, lim_sup):\n",
+    "    dados_extraidos = []\n",
+    "    for i in range(lim_inf, lim_sup):\n",
+    "        dados_extraidos = dados_extraidos + listar_dados_pagina(i,driver)\n",
+    "    df = pd.DataFrame(dados_extraidos, columns =['id', 'Classe', 'Assunto', 'Magistrado', 'Comarca', 'Foro', 'Vara', 'Data_disp', 'Teor'])\n",
+    "    df.to_csv('27_10_19_'+str(lim_inf)+'_'+str(lim_sup)+'.csv', encoding = 'latin-1')"
    ]
   },
   {
@@ -75,12 +82,6 @@
    "source": [
     "driver = webdriver.Firefox(executable_path = 'D:\\\\programas\\\\geckodriver\\\\geckodriver.exe')\n",
     "driver.get('http://esaj.tjsp.jus.br/cjpg/pesquisar.do?conversationId=&dadosConsulta.pesquisaLivre=JULG*&tipoNumero=UNIFICADO&numeroDigitoAnoUnificado=&foroNumeroUnificado=&dadosConsulta.nuProcesso=&dadosConsulta.nuProcessoAntigo=&classeTreeSelection.values=&classeTreeSelection.text=&assuntoTreeSelection.values=&assuntoTreeSelection.text=&agenteSelectedEntitiesList=&contadoragente=0&contadorMaioragente=0&cdAgente=&nmAgente=&dadosConsulta.dtInicio=&dadosConsulta.dtFim=&varasTreeSelection.values=&varasTreeSelection.text=&dadosConsulta.ordenacao=DESC#')\n",
-    "def extrair_intervalo_pg(lim_inf, lim_sup):\n",
-    "    dados_extraidos = []\n",
-    "    for i in range(lim_inf, lim_sup):\n",
-    "        dados_extraidos = dados_extraidos + listar_dados_pagina(i,driver)\n",
-    "    df = pd.DataFrame(dados_extraidos, columns =['id', 'Classe', 'Assunto', 'Magistrado', 'Comarca', 'Foro', 'Vara', 'Data_disp', 'Teor'])\n",
-    "    df.to_csv('27_10_19_'+str(lim_inf)+'_'+str(lim_sup)+'.csv', encoding = 'latin-1')\n",
     "\n",
     "range_max = 419\n",
     "range_min = 1\n",
@@ -90,6 +91,13 @@
     "    lim_sup = i*500\n",
     "    extrair_intervalo_pg(lim_inf, lim_sup)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
